@@ -5,7 +5,6 @@ import org.mitre.tdp.boogie.arinc.v18.field.BlankSpec;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.function.Predicate;
 
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -14,19 +13,19 @@ class TestRecordSpecValidator {
 
   @Test
   void testPassesGoodRecordSpec() {
-    RecordSpec goodSpec = dummySpec(10, x -> true, new RecordField<>("field1", new BlankSpec(10)));
+    RecordSpec goodSpec = dummySpec(10, new RecordField<>("field1", new BlankSpec(10)));
     RecordSpecValidator.INSTANCE.accept(goodSpec);
   }
 
   @Test
   void testFailsSpecWithExpectedRecordLengthBelowZero() {
-    RecordSpec badSpec = dummySpec(-1, x -> true, new RecordField<>("field1", new BlankSpec(10)));
+    RecordSpec badSpec = dummySpec(-1, new RecordField<>("field1", new BlankSpec(10)));
     assertThrows(IllegalArgumentException.class, () -> RecordSpecValidator.INSTANCE.accept(badSpec));
   }
 
   @Test
   void testFailsSpecWithMismatchedRecordAndFieldLengths() {
-    RecordSpec badSpec = dummySpec(1, x -> true, new RecordField<>("field1", new BlankSpec(10)));
+    RecordSpec badSpec = dummySpec(1, new RecordField<>("field1", new BlankSpec(10)));
     assertThrows(IllegalArgumentException.class, () -> RecordSpecValidator.INSTANCE.accept(badSpec));
   }
 
@@ -34,7 +33,6 @@ class TestRecordSpecValidator {
   void testFailsSpecWithDuplicateFieldNames() {
     RecordSpec badSpec = dummySpec(
         11,
-        x -> true,
         new RecordField<>("field1", new BlankSpec(5)),
         new RecordField<>("field1", new BlankSpec(6))
     );
@@ -48,40 +46,49 @@ class TestRecordSpecValidator {
 
     assertAll(
         () -> assertThrows(IllegalArgumentException.class,
-            () -> RecordSpecValidator.INSTANCE.accept(dummySpec(10, x -> true, List.of(), field))),
-        () -> assertThrows(IllegalArgumentException.class,
-            () -> RecordSpecValidator.INSTANCE.accept(
-                dummySpec(10, x -> true, (List<RecordDiscriminator>) null, field))),
-        () -> assertThrows(IllegalArgumentException.class,
-            () -> RecordSpecValidator.INSTANCE.accept(dummySpec(10, x -> true, Arrays.asList(RecordDiscriminator.prefix("X"), null), field)))
+            () -> RecordSpecValidator.INSTANCE.accept(dummySpec(10, List.of(), field))),
+        () -> assertThrows(NullPointerException.class,
+            () -> dummySpec(10, (List<RecordDiscriminator>) null, field)),
+        () -> assertThrows(NullPointerException.class,
+            () -> dummySpec(10, Arrays.asList(RecordDiscriminator.prefix("X"), null), field))
     );
   }
 
   @Test
   void testFailsSpecWithDiscriminatorOutsideRecordWidth() {
-    RecordField<?> field = new RecordField<>("field1", new BlankSpec(5));
+    RecordField<?> fiveCharacterField = new RecordField<>("field1", new BlankSpec(5));
+    RecordField<?> thirteenCharacterField = new RecordField<>("field1", new BlankSpec(13));
 
     assertAll(
         () -> assertThrows(IllegalArgumentException.class,
-            () -> RecordSpecValidator.INSTANCE.accept(dummySpec(5, x -> true, List.of(RecordDiscriminator.column6('E', 'R')), field))),
+            () -> RecordSpecValidator.INSTANCE.accept(dummySpec(
+                5, List.of(RecordDiscriminator.primaryColumn6('E', 'R', 0)), fiveCharacterField))),
         () -> assertThrows(IllegalArgumentException.class,
-            () -> RecordSpecValidator.INSTANCE.accept(dummySpec(5, x -> true, List.of(RecordDiscriminator.column13('P', 'C')), field))),
+            () -> RecordSpecValidator.INSTANCE.accept(dummySpec(
+                5, List.of(RecordDiscriminator.primaryColumn13('P', 'C', 0)), fiveCharacterField))),
         () -> assertThrows(IllegalArgumentException.class,
-            () -> RecordSpecValidator.INSTANCE.accept(dummySpec(5, x -> true, List.of(RecordDiscriminator.prefix("TOO-LONG")), field)))
+            () -> RecordSpecValidator.INSTANCE.accept(dummySpec(5, List.of(RecordDiscriminator.prefix("TOO-LONG")), fiveCharacterField))),
+        () -> assertThrows(IllegalArgumentException.class,
+            () -> RecordSpecValidator.INSTANCE.accept(dummySpec(
+                13, List.of(RecordDiscriminator.primaryColumn6('E', 'R', 13)), thirteenCharacterField))),
+        () -> assertThrows(IllegalArgumentException.class,
+            () -> RecordSpecValidator.INSTANCE.accept(dummySpec(
+                13,
+                List.of(RecordDiscriminator.continuationColumn6('E', 'R', 12, 'E')),
+                thirteenCharacterField)))
     );
   }
 
-  private static RecordSpec dummySpec(int size, Predicate<String> matcher, RecordField<?>... fields) {
-    return dummySpec(size, matcher, List.of(RecordDiscriminator.prefix("X")), fields);
+  private static RecordSpec dummySpec(int size, RecordField<?>... fields) {
+    return dummySpec(size, List.of(RecordDiscriminator.prefix("X")), fields);
   }
 
   private static RecordSpec dummySpec(
       int size,
-      Predicate<String> matcher,
       List<RecordDiscriminator> discriminators,
       RecordField<?>... fields
   ) {
-    return new RecordSpec() {
+    return new RecordSpec(discriminators) {
       @Override
       public int recordLength() {
         return size;
@@ -90,16 +97,6 @@ class TestRecordSpecValidator {
       @Override
       public List<RecordField<?>> recordFields() {
         return Arrays.asList(fields);
-      }
-
-      @Override
-      public List<RecordDiscriminator> recordDiscriminators() {
-        return discriminators;
-      }
-
-      @Override
-      public boolean matchesRecord(String arincRecord) {
-        return matcher.test(arincRecord);
       }
     };
   }
